...
                Text("管理作者、出版社、标签，批量修改名称，繁转简等")
            }

            // MARK: - 数据备份
            Section {
                NavigationLink(destination: DataBackupView()) {
                    Label("数据备份", systemImage: "externaldrive")
                }
            } header: {
                Text("数据备份")
            } footer: {
                Text("备份/恢复数据库，导入/导出书单")
            }
...
